--- a/ha_config/custom_components/feeding_plc/manifest.json
+++ b/ha_config/custom_components/feeding_plc/manifest.json
@@ -6,6 +6,6 @@
   "dependencies": [],
   "codeowners": ["@iam"],
   "requirements": ["pymodbus>=3.0.0"],
-  "config_flow": true,
+  "config_flow": false,
   "supported_platforms": ["sensor", "number", "time", "binary_sensor"]
 }
