--- a/ha_config/lovelace/tab_pool_1.yaml
+++ b/ha_config/lovelace/tab_pool_1.yaml
@@ -108,14 +108,14 @@ sections:
       - type: entities
         entities:
           - entity: time.b01_vremia_nachala_2
-            name: Начало
+            name: Начало кормления
           - entity: time.b01_period_2
-            name: Период
+            name: Периодичность
           - entity: number.b01_ust_kol_vo_kormlenii_2
             name: Кол-во
             icon: mdi:counter
           - entity: number.b01_ust_dlitelnost_2
-            name: Длительность
+            name: Длительность, сек
             icon: mdi:timer
   - type: grid
     cards:
