--- a/ha_config/lovelace/tab_temp_oxy.yaml
+++ b/ha_config/lovelace/tab_temp_oxy.yaml
@@ -3,192 +3,197 @@ sections:
   - type: grid
     cards:
       - type: heading
-        heading: Ш1 (Б 1-5)
+        heading: Шкаф №1 (Бассейны 1-5)
       - type: entities
         entities:
           - entity: number.sh1_verkh_limit_kisloroda
-            name: Верх. предел O₂
+            name: Верхний предел O₂
             mode: box
           - entity: number.sh1_niz_limit_kisloroda
-            name: Ниж. предел O₂
+            name: Нижний предел O₂
             mode: box
           - entity: number.sh1_otkl_kisloroda
-            name: Откл. O₂
+            name: Отключение подачи O₂
             mode: box
           - entity: number.sh1_vkl_kisloroda
-            name: Вкл. O₂
+            name: Включение подачи O₂
             mode: box
           - entity: number.sh1_verkh_limit_temperatury
-            name: Верх. предел T°
+            name: Верхний предел T°
             mode: box
           - entity: number.sh1_niz_limit_temperatury
-            name: Ниж. предел T°
+            name: Нижний предел T°
             mode: box
   - type: grid
     cards:
       - type: heading
-        heading: Ш2 (Б 6-10)
+        heading: Шкаф №2 (Бассейны 6-10)
       - type: entities
         entities:
           - entity: number.sh2_verkh_limit_kisloroda
-            name: Верх. предел O₂
+            name: Верхний предел O₂
             mode: box
           - entity: number.sh2_niz_limit_kisloroda
-            name: Ниж. предел O₂
+            name: Нижний предел O₂
             mode: box
           - entity: number.sh2_otkl_kisloroda
-            name: Откл. O₂
+            name: Отключение подачи O₂
             mode: box
           - entity: number.sh2_vkl_kisloroda
-            name: Вкл. O₂
+            name: Включение подачи O₂
             mode: box
           - entity: number.sh2_verkh_limit_temperatury
-            name: Верх. предел T°
+            name: Верхний предел T°
             mode: box
           - entity: number.sh2_niz_limit_temperatury
-            name: Ниж. предел T°
+            name: Нижний предел T°
             mode: box
   - type: grid
     cards:
       - type: heading
-        heading: Ш3 (Б 11-15)
+        heading: Шкаф №3 (Бассейны 11-15)
       - type: entities
         entities:
           - entity: number.sh3_verkh_limit_kisloroda
-            name: Верх. предел O₂
+            name: Верхний предел O₂
             mode: box
           - entity: number.sh3_niz_limit_kisloroda
-            name: Ниж. предел O₂
+            name: Нижний предел O₂
             mode: box
           - entity: number.sh3_otkl_kisloroda
-            name: Откл. O₂
+            name: Отключение подачи O₂
             mode: box
           - entity: number.sh3_vkl_kisloroda
-            name: Вкл. O₂
+            name: Включение подачи O₂
             mode: box
           - entity: number.sh3_verkh_limit_temperatury
-            name: Верх. предел T°
+            name: Верхний предел T°
             mode: box
           - entity: number.sh3_niz_limit_temperatury
-            name: Ниж. предел T°
+            name: Нижний предел T°
             mode: box
   - type: grid
     cards:
       - type: heading
-        heading: Ш4 (Б 16-20)
+        heading: Шкаф №4 (Бассейны 16-20)
       - type: entities
         entities:
           - entity: number.sh4_verkh_limit_kisloroda
-            name: Верх. предел O₂
+            name: Верхний предел O₂
             mode: box
           - entity: number.sh4_niz_limit_kisloroda
-            name: Ниж. предел O₂
+            name: Нижний предел O₂
             mode: box
           - entity: number.sh4_otkl_kisloroda
-            name: Откл. O₂
+            name: Отключение подачи O₂
             mode: box
           - entity: number.sh4_vkl_kisloroda
-            name: Вкл. O₂
+            name: Включение подачи O₂
             mode: box
           - entity: number.sh4_verkh_limit_temperatury
-            name: Верх. предел T°
+            name: Верхний предел T°
             mode: box
           - entity: number.sh4_niz_limit_temperatury
-            name: Ниж. предел T°
+            name: Нижний предел T°
             mode: box
   - type: grid
     cards:
       - type: heading
-        heading: Ш11 (Б 51-55)
+        heading: Шкаф №11 (Бассейны 51-55)
       - type: entities
         entities:
           - entity: number.sh11_verkh_limit_kisloroda
-            name: Верх. предел O₂
+            name: Верхний предел O₂
             mode: box
           - entity: number.sh11_niz_limit_kisloroda
-            name: Ниж. предел O₂
+            name: Нижний предел O₂
             mode: box
           - entity: number.sh11_otkl_kisloroda
-            name: Откл. O₂
+            name: Отключение подачи O₂
             mode: box
           - entity: number.sh11_vkl_kisloroda
-            name: Вкл. O₂
+            name: Включение подачи O₂
             mode: box
           - entity: number.sh11_verkh_limit_temperatury
-            name: Верх. предел T°
+            name: Верхний предел T°
             mode: box
           - entity: number.sh11_niz_limit_temperatury
-            name: Ниж. предел T°
+            name: Нижний предел T°
             mode: box
   - type: grid
     cards:
       - type: heading
-        heading: Ш12 (Б 56-60)
+        heading: Шкаф №12 (Бассейны 56-60)
       - type: entities
         entities:
           - entity: number.sh12_verkh_limit_kisloroda
-            name: Верх. предел O₂
+            name: Верхний предел O₂
             mode: box
           - entity: number.sh12_niz_limit_kisloroda
-            name: Ниж. предел O₂
+            name: Нижний предел O₂
             mode: box
           - entity: number.sh12_otkl_kisloroda
-            name: Откл. O₂
+            name: Отключение подачи O₂
             mode: box
           - entity: number.sh12_vkl_kisloroda
-            name: Вкл. O₂
+            name: Включение подачи O₂
             mode: box
           - entity: number.sh12_verkh_limit_temperatury
-            name: Верх. предел T°
+            name: Верхний предел T°
             mode: box
           - entity: number.sh12_niz_limit_temperatury
-            name: Ниж. предел T°
+            name: Нижний предел T°
             mode: box
   - type: grid
     cards:
       - type: heading
-        heading: Ш13 (Б 61-66)
+        heading: Шкаф №13 (Бассейны 61-66)
       - type: entities
         entities:
           - entity: number.sh13_verkh_limit_kisloroda
-            name: Верх. предел O₂
+            name: Верхний предел O₂
             mode: box
           - entity: number.sh13_niz_limit_kisloroda
-            name: Ниж. предел O₂
+            name: Нижний предел O₂
             mode: box
           - entity: number.sh13_otkl_kisloroda
-            name: Откл. O₂
+            name: Отключение подачи O₂
             mode: box
           - entity: number.sh13_vkl_kisloroda
-            name: Вкл. O₂
+            name: Включение подачи O₂
             mode: box
           - entity: number.sh13_verkh_limit_temperatury
-            name: Верх. предел T°
+            name: Верхний предел T°
             mode: box
           - entity: number.sh13_niz_limit_temperatury
-            name: Ниж. предел T°
+            name: Нижний предел T°
             mode: box
   - type: grid
     cards:
       - type: heading
-        heading: Ш14 (Б 66-70)
+        heading: Шкаф №14 (Бассейны 66-70)
       - type: entities
         entities:
           - entity: number.sh14_verkh_limit_kisloroda
-            name: Верх. предел O₂
+            name: Верхний предел O₂
             mode: box
           - entity: number.sh14_niz_limit_kisloroda
-            name: Ниж. предел O₂
+            name: Нижний предел O₂
             mode: box
           - entity: number.sh14_otkl_kisloroda
-            name: Откл. O₂
+            name: Отключение подачи O₂
             mode: box
           - entity: number.sh14_vkl_kisloroda
-            name: Вкл. O₂
+            name: Включение подачи O₂
             mode: box
           - entity: number.sh14_verkh_limit_temperatury
-            name: Верх. предел T°
+            name: Верхний предел T°
             mode: box
           - entity: number.sh14_niz_limit_temperatury
-            name: Ниж. предел T°
+            name: Нижний предел T°
             mode: box
+header:
+  card:
+    type: markdown
+    content: '## Предельные значения показателей для мониторинга и оповещения'
+    text_only: true
